fixed LocalDate template creation